src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Brand_Opportunities__c</fullName>
        <label>Brand Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Strengths__c</fullName>
        <label>Brand Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Threats__c</fullName>
        <label>Brand Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Weakness__c</fullName>
        <label>Brand Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Buying_Criteria_Last_Update__c</fullName>
        <label>Política de Compras Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Buying_Criteria__c</fullName>
        <label>Política de Compras</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSAT_Current_Year__c</fullName>
        <label>CSAT Current Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Last_Year__c</fullName>
        <label>CSAT Last Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Second_To_Last_Year__c</fullName>
        <label>CSAT Second To Last Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Unit__c</fullName>
        <label>CSAT Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUIT_Formula__c</fullName>
        <formula>IF(LEN(TEXT(CUIT__c)) = 11, 
(LEFT(TEXT(CUIT__c),2) + &apos;-&apos; + MID(TEXT(CUIT__c), 3,8) + &apos;-&apos; + RIGHT(TEXT(CUIT__c),1)),
TEXT(CUIT__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CUIT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUIT__c</fullName>
        <label>CUIT</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoría WH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RP</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>DG</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>TT</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>FO</fullName>
                </value>
                <value>
                    <fullName>EI</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
                <value>
                    <fullName>EO</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>OO</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cuenta_Para_Los_Graficos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cuenta Para Los Graficos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DomicilioRecepcionNotificaciones__c</fullName>
        <label>Domicilio de recepción de notificaciones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Analysts_vision__c</fullName>
        <label>External Analysts vision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Holding_Formula__c</fullName>
        <formula>TEXT(Numero_de_Holding__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Holding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Cliente__c</fullName>
        <label>ID Cliente</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Micro_Industry__c</fullName>
        <label>Subsector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Centros Comerciales</fullName>
                </value>
                <value>
                    <fullName>Automotores y Camiones</fullName>
                </value>
                <value>
                    <fullName>Droguerías</fullName>
                </value>
                <value>
                    <fullName>Tienda Departamental</fullName>
                </value>
                <value>
                    <fullName>Otros Comercios</fullName>
                </value>
                <value>
                    <fullName>Supermercados</fullName>
                </value>
                <value>
                    <fullName>Alimentos y Bebidas</fullName>
                </value>
                <value>
                    <fullName>Textil y Calzado</fullName>
                </value>
                <value>
                    <fullName>Combustibles y Lubricantes</fullName>
                </value>
                <value>
                    <fullName>Call Centers</fullName>
                </value>
                <value>
                    <fullName>Grupo Telefonica</fullName>
                </value>
                <value>
                    <fullName>Hardware Tecnológico</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Contenido Multimedia</fullName>
                </value>
                <value>
                    <fullName>Telcos e Internet</fullName>
                </value>
                <value>
                    <fullName>Banca</fullName>
                </value>
                <value>
                    <fullName>Instituciones financieras no bancarias</fullName>
                </value>
                <value>
                    <fullName>Medios de Pago</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Agro, Pesca y Forestación</fullName>
                </value>
                <value>
                    <fullName>Construccion</fullName>
                </value>
                <value>
                    <fullName>Industria Alimentos</fullName>
                </value>
                <value>
                    <fullName>Industria Automotriz y Autopartes</fullName>
                </value>
                <value>
                    <fullName>Industria Ligera y Manufacturas</fullName>
                </value>
                <value>
                    <fullName>Industria Metalurgica y Pesada</fullName>
                </value>
                <value>
                    <fullName>Industria Química</fullName>
                </value>
                <value>
                    <fullName>Industria Textil y Calzado</fullName>
                </value>
                <value>
                    <fullName>Laboratorios</fullName>
                </value>
                <value>
                    <fullName>Mineria</fullName>
                </value>
                <value>
                    <fullName>Petroleo y Gas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_de_Cliente__c</fullName>
        <label>Numero de Cliente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_Holding__c</fullName>
        <label>Numero de Holding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Opportunities__c</fullName>
        <label>Other Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Strengths__c</fullName>
        <label>Other Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Threats__c</fullName>
        <label>Other Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Weakness__c</fullName>
        <label>Other Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>People_Opportunities__c</fullName>
        <label>People Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>People_Strengths__c</fullName>
        <label>People Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>People_Threats__c</fullName>
        <label>People Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>People_Weakness__c</fullName>
        <label>People Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PicklistSegmento__c</fullName>
        <label>Segmento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negocio Corporativo</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Services_Opportunities__c</fullName>
        <label>Products/Services Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products_Services_Strengths__c</fullName>
        <label>Products/Services Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products_Services_Threats__c</fullName>
        <label>Products/Services Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products_Services_Weakness__c</fullName>
        <label>Products/Services Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Razon_Social__c</fullName>
        <label>Razón Social</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_WH__c</fullName>
        <label>Region WH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grandes Operadores</fullName>
                </value>
                <value>
                    <fullName>Interior</fullName>
                </value>
                <value>
                    <fullName>Internacional</fullName>
                </value>
                <value>
                    <fullName>Prestadores</fullName>
                </value>
                <value>
                    <fullName>Telefonía</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Región SCP</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_delta__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Privado</fullName>
                </value>
                <value>
                    <fullName>Gobierno</fullName>
                </value>
                <value>
                    <fullName>Pymes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Ámbito</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Privado</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Público</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segmento_Vertical__c</fullName>
        <label>Segmento Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administración Pública, Defensa y Seguridad Social</fullName>
                </value>
                <value>
                    <fullName>Agricultura, Ganadería, Caza y Silvicultura</fullName>
                </value>
                <value>
                    <fullName>Asociaciones e Instituciones</fullName>
                </value>
                <value>
                    <fullName>Automotores - Autopartistas</fullName>
                </value>
                <value>
                    <fullName>Automotores - Concesionarios</fullName>
                </value>
                <value>
                    <fullName>Automotores - Industria Automotriz</fullName>
                </value>
                <value>
                    <fullName>Construcción</fullName>
                </value>
                <value>
                    <fullName>Consultoras</fullName>
                </value>
                <value>
                    <fullName>Educación</fullName>
                </value>
                <value>
                    <fullName>Entretenimiento</fullName>
                </value>
                <value>
                    <fullName>Explotación de Minas y Canteras</fullName>
                </value>
                <value>
                    <fullName>Gobierno Extranjero</fullName>
                </value>
                <value>
                    <fullName>Gobierno Municipal</fullName>
                </value>
                <value>
                    <fullName>Gobierno Nacional</fullName>
                </value>
                <value>
                    <fullName>Gobierno Provincial</fullName>
                </value>
                <value>
                    <fullName>Industria Alimenticia</fullName>
                </value>
                <value>
                    <fullName>Industria Química</fullName>
                </value>
                <value>
                    <fullName>Industrias - Otro</fullName>
                </value>
                <value>
                    <fullName>Logística</fullName>
                </value>
                <value>
                    <fullName>Manufactura</fullName>
                </value>
                <value>
                    <fullName>Medios de Comunicación</fullName>
                </value>
                <value>
                    <fullName>Petróleo</fullName>
                </value>
                <value>
                    <fullName>Prestadores Servicios Públicos - Agua</fullName>
                </value>
                <value>
                    <fullName>Prestadores Servicios Públicos - Correos</fullName>
                </value>
                <value>
                    <fullName>Prestadores Servicios Públicos - Energía</fullName>
                </value>
                <value>
                    <fullName>Prestadores Servicios Públicos - GAS</fullName>
                </value>
                <value>
                    <fullName>Prestadores Servicios Públicos - Transporte</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Salud - Clínicas, Sanatorios y Hospitales</fullName>
                </value>
                <value>
                    <fullName>Salud - Laboratorios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Context_Last_Update__c</fullName>
        <label>Ultima Actualización</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Strategic_Context__c</fullName>
        <label>Contexto Estratégico</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_region_delta__c</fullName>
        <label>Territorio</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region_delta__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gobierno amba 1</fullName>
                </value>
                <value>
                    <fullName>Gobierno amba 2</fullName>
                </value>
                <value>
                    <fullName>Gobierno litoral</fullName>
                </value>
                <value>
                    <fullName>Gobierno mediterraneo</fullName>
                </value>
                <value>
                    <fullName>Industria</fullName>
                </value>
                <value>
                    <fullName>Financias</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
                <value>
                    <fullName>Privado litoral</fullName>
                </value>
                <value>
                    <fullName>Privado mediterraneo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cliente_formula__c</fullName>
        <formula>TEXT(Numero_de_Cliente__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numero de Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idClienteLegado__c</fullName>
        <label>Id Cliente Legado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Mis_cuentas_SCP</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>Mis cuentas SCP</label>
        <language>es</language>
    </listViews>
    <validationRules>
        <fullName>CuentaGestion_DebeTener_CPrincipal</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Type,&quot;Cuenta de Gestion&quot;) &amp;&amp; ParentId == null, true, false)</errorConditionFormula>
        <errorMessage>Las cuentas de tipo gestión deben tener una cuenta principal asociada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CuentasCabeceras_sinCuentaPrincipal</fullName>
        <active>true</active>
        <description>Las cuentas cabecera no pueden tener asociada una cuenta principal.</description>
        <errorConditionFormula>IF(ISPICKVAL(Type,&quot;Cuenta Cabecera&quot;) &amp;&amp; ParentId != null, true, false)</errorConditionFormula>
        <errorMessage>Las cuentas cabecera no pueden tener asociada una cuenta principal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Id_cliente_legado_diez_caracteres</fullName>
        <active>true</active>
        <description>El campo id cliente legado debe tener 10 caracteres.</description>
        <errorConditionFormula>IF(AND(LEN(idClienteLegado__c)!= 10, idClienteLegado__c != null), true, false)</errorConditionFormula>
        <errorMessage>El campo Id Cliente Legado debe tener 10 caracteres.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>campo_telefono_solo_puede_ser_numero</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK(Phone) , false, NOT(ISNUMBER( Phone )))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>El telefono solo puede tener caracteres numericos</errorMessage>
    </validationRules>
</CustomObject>